structureclasification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: structureclasification-deployment
  labels:
    app: structureclasification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: structureclasification
  template:
    metadata:
      labels:
        app: structureclasification
    spec:
      containers:
      - name: structureclasification
        image: bharghava52/structureclasification:latest
        ports:
        - containerPort: 9099
---
apiVersion: v1
kind: Service
metadata:
  name: structureclasification-service
spec:
  type: NodePort
  selector:
    app: structureclasification
  ports:
    - protocol: TCP
      port: 9099
      targetPort: 9099
      nodePort: 30101
