structureclasification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: structureclasification-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: structureclasification.com
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: structureclasification-service
            port:
              number: 9099
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: structureclasification-service
            port:
              number: 30101
